# agressivo

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/satellite/: catalog.example.json
docs/: PLANO-MAESTRO-BOT-AGRESSIVO.md
src/agressivo/: __init__.py  __main__.py  cli.py  config.py  logging_config.py  reconcile.py
src/agressivo/backtest/: __init__.py  costs.py  engine.py  fills.py  metrics.py  walkforward.py
src/agressivo/data/: __init__.py  ohlcv.py  quality.py
src/agressivo/exchange/: __init__.py  balance.py  factory.py  orders.py
src/agressivo/execution/: __init__.py  broker.py  ledger.py  ledger_read.py  models.py  order_params.py  paper_mirror.py  retry.py
src/agressivo/paper/: __init__.py  decision.py  persist.py  state.py  step.py
src/agressivo/risk/: __init__.py  kelly.py  policy.py
src/agressivo/runner/: __init__.py  breakout_bt.py  report_json.py
src/agressivo/satellite/: __init__.py  catalog.py  policy.py  resolve.py  schema.py
src/agressivo/strategy/: __init__.py  core_breakout.py  sniper.py
tests/: test_breakout_satellite.py  test_broker_retries.py  test_cli_guardrails.py  test_doctor.py  test_engine.py  test_exchange_orders.py  test_exchange_symbol.py  test_execution.py  test_kelly.py  test_ledger_read.py  test_metrics_wf_slice.py  test_order_params.py  test_paper.py  test_paper_exit.py  test_paper_mirror.py  test_quality.py  test_report_json.py  test_satellite.py  test_satellite_resolve.py  test_strategy_breakout.py
