[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agressivo"
version = "0.1.0"
description = "Core momentum/breakout bot — data, backtest, risk (plan: docs/PLANO-MAESTRO-BOT-AGRESSIVO.md)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "ccxt>=4.2.0",
  "pyarrow>=15.0.0",
  "numpy>=1.26.0",
  "pandas>=2.1.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.4.0"]

[project.scripts]
agressivo = "agressivo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
